[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "payplus-python"
version = "0.2.1"
description = "Python SDK for PayPlus payment gateway with subscription management for SaaS apps"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Two Solutions", email = "dev@two-solutions.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "email-validator>=2.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
fastapi = [
    "fastapi>=0.100.0",
]
flask = [
    "flask>=2.0.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.28.0",
]
mongodb = [
    "motor>=3.0.0",
    "pymongo>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Two-Solutions/payplus-python"
Documentation = "https://github.com/Two-Solutions/payplus-python#readme"
Repository = "https://github.com/Two-Solutions/payplus-python"
Issues = "https://github.com/Two-Solutions/payplus-python/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
